ununderline heading links

--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -35,3 +35,15 @@ h1 { font-size: var(--s4); }
 h2 { font-size: var(--s3); }
 h3 { font-size: var(--s2); }
 h4 { font-size: var(--s1); }
+
+h1,
+h2,
+h3,
+h4 {
+  color: var(--ctp-mauve);
+}
+
+:is(h1,h2,h3,h4) a {
+  color: inherit;
+  text-decoration: none;
+}
