Update fonts and styles

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,4 +1,5 @@
 @import "@catppuccin/palette/style";
+@import "fonts.css";
 @import "catppuccin-helpers.css";
 @import "reset.css";
 @import "sizing.css";
