Update link styling in typography.css.

--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -68,14 +68,14 @@ h4 {
 /* links */
 a {
   color: var(--ctp-blue);
-  text-decoration-color: var(--ctp-text);
+  text-decoration-color: var(--ctp-subtext0);
   text-decoration-line: underline;
   text-decoration-thickness: 10%;
   text-decoration-skip-ink: all;
 }
 
 a:hover {
-  text-decoration-thickness: 7%;
+  text-decoration-thickness: 7.5%;
 }
 
 /* code, pre */
