Add transition to background color and adjust text decoration thickness in typography.css

--- a/assets/style/catppuccin-helpers.css
+++ b/assets/style/catppuccin-helpers.css
@@ -115,3 +115,7 @@
   --ctp-mantle: var(--ctp-mocha-mantle);
   --ctp-crust: var(--ctp-mocha-crust);
 }
+
+* {
+  transition: background-color .3s;
+}
