--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -5,6 +5,7 @@
   --font-body: "General Sans", sans-serif;
   --font-display: "Poppins", sans-serif;
   --font-code: "Space Mono", monospace;
+  --color-primary: var(--ctp-mauve);
   font-size: var(--s0);
 }
 
@@ -55,7 +56,7 @@ h1,
 h2,
 h3,
 h4 {
-  color: var(--ctp-mauve);
+  color: var(--color-primary);
   font-family: var(--font-display);
   font-weight: 666;
 }
