--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -55,7 +55,8 @@ h4 {
 h1,
 h2,
 h3,
-h4 {
+h4,
+.font-display {
   color: var(--color-primary);
   font-family: var(--font-display);
   font-weight: 666;
