Add line-height to display text

--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -60,6 +60,7 @@ h4,
   color: var(--color-primary);
   font-family: var(--font-display);
   font-weight: 666;
+  line-height: 1.2;
 }
 
 :is(h1, h2, h3, h4) a {
