Add additional styles to the img element

--- a/assets/style/reset.css
+++ b/assets/style/reset.css
@@ -17,4 +17,9 @@ p {
 img {
   max-width: 100%;
   height: auto;
+  vertical-align: middle;
+  font-style: italic;
+  background-repeat: no-repeat;
+  background-size: cover;
+  shape-margin: 0.75rem;
 }
