--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,11 +6,13 @@
 
 :root {
   --border-radius: var(--s-2);
+  --border-thin: 2px;
 }
 
-.testing {
-  outline: 1px solid #f4206988;
+mark, .testing {
+  outline: var(--border-thin) solid #f4206988;
   background-color: #f4206944;
+  color: currentColor;
   padding: 4px;
   margin: -4px;
   border-radius: 4px;
