--- a/assets/style/tokipona.css
+++ b/assets/style/tokipona.css
@@ -18,6 +18,7 @@
   font-family: "Fairfax Pona HD";
   src: url("../fonts/FairfaxPonaHD.eot");
   src: url("../fonts/FairfaxPonaHD.ttf") format("truetype");
+  font-display: swap;
 }
 
 /* toki pona - sitelen Lasina */
@@ -55,8 +56,11 @@ h6 :lang("tok-Latn") {
 .font-tp-sp {
   font-family: "Fairfax Pona HD", cursive;
   font-size: 1.5rem;
-  font-feature-settings: "kern", "cv70", "cv77", "cv80", "cv90", "cv91", "ss19";
+  font-feature-settings: "kern" 1, "cv70" 1, "cv77" 1, "cv80" 1, "cv90" 1,
+    "cv91" 1, "ss19" 1, "liga" 1;
+  white-space: pre-wrap;
   word-break: keep-all;
+  overflow-wrap: normal;
 }
 
 /* ruby annotations */
