Add secondary color and update link styles

--- a/assets/style/typography.css
+++ b/assets/style/typography.css
@@ -77,18 +77,20 @@ p {
 /* links */
 
 a {
-  color: var(--ctp-blue);
+  color: var(--color-secondary);
   text-decoration-color: var(--ctp-subtext0);
   text-decoration-line: underline;
   text-decoration-thickness: var(--border-thin);
   text-decoration-skip-ink: all;
   text-underline-offset: 0.25em;
-  transition: text-underline-offset 0.1s ease-in-out;
+  transition: text-underline-offset 0.2s ease-in-out,
+    text-decoration-color 0.8s ease-in-out;
 }
 
 a:hover {
   /* text-decoration-thickness: from-font; */
   text-underline-offset: 0.05em;
+  text-decoration-color: var(--color-secondary);
 }
 
 /* code, pre */
