--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -8,7 +8,7 @@
 
 :root {
   --color-primary: var(--ctp-mauve);
-
+  --color-secondary: var(--ctp-blue);
   --border-radius: var(--s-2);
   --border-thin: 2px;
 }
