--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,6 +9,7 @@
 :root {
   --color-primary: var(--ctp-mauve);
   --color-secondary: var(--ctp-blue);
+  --color-razzmatazz: #f42069;
   --border-radius: var(--s-2);
   --border-thin: 2px;
 }
@@ -21,6 +22,16 @@ mark,
   padding: 4px;
   margin: -4px;
   border-radius: 4px;
+}
+
+.tenpi {
+  color: var(--color-razzmatazz);
+}
+.primary {
+  color: var(--color-primary);
+}
+.secondary {
+  color: var(--color-secondary);
 }
 
 #nuxt-devtools-iframe {
